--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 }
 body, html{
   background-Image:linear-gradient(red,yellow);
- 
+  height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
 }
