--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -6,18 +6,32 @@
     background-color: orangered;
 }
 input[type=text],input[type=email],select{
-padding: 10px;
+padding: 6px;
 border: solid 2px black;
 font-size: 20px;
 }
 label{
     font-size: 20px;
 }
+#close{
+    background-color: red;
+    color: white;
+    margin-top:-14px; 
+    float: right;
+    margin-right: -28px;
+    font-size: 15px;
+    padding: 3px 6px;
+    position: relative;
+}
 form h4{
     font-size: 20px;
     background-color: orange;
     padding-top:10px ;
     padding-bottom: 10px;
+}
+.inline{
+    display: inline-block;
+  padding: 10px;
 }
 
 
