--- a/src/components/Ready/Ready.css
+++ b/src/components/Ready/Ready.css
@@ -5,6 +5,10 @@ body.active-modal {
 
 h2{
     font-size: 30px;
+    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
+}
+h4{
+    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
 }
 
 .modal, .overlay {
@@ -15,6 +19,7 @@ h2{
     right: 0;
     bottom: 0;
     position: fixed;
+  
     
 }
 
@@ -23,15 +28,15 @@ h2{
 }
 .modal-content {
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     line-height: 1.4;
     background: #f1f1f1;
     padding: 14px 28px;
-    border-radius: 3px;
+    border-radius: 40px;
     max-width: 600px;
     min-width: 300px;
-    border: solid 15px yellow;
+    
 }
 
