--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+ 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -13,7 +11,7 @@ code {
     monospace;
 }
 body, html{
-  background-Image:linear-gradient(red,yellow);
+  background-Image:linear-gradient(to right,#aa076b,#62055f);
   height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
