fixed responsiveness problem

--- a/src/components/Counter/Counter.css
+++ b/src/components/Counter/Counter.css
@@ -1,7 +1,8 @@
 
 .App{
    text-align: center;
-  width: 500px;
+  min-width: 300px;
+max-width: 500px;
     margin-right: auto;
     margin-left: auto;
 }
