--- a/src/components/Ready/Ready.css
+++ b/src/components/Ready/Ready.css
@@ -27,7 +27,7 @@ h4{
     background: rgba(49,49,49,0.8);
 }
 .modal-content {
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
