--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -7,7 +7,7 @@
     color: white;
 }
 .modal-content {
-    position: relative;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -16,7 +16,7 @@
     padding: 14px 28px;
     border-radius: 40px;
     max-width: 600px;
-    min-width: 200px;
+    min-width: 250px;
     border: solid 15px #aa076b ;
 }
 label{
