--- a/src/components/LeaderBoard/LeaderBoard.css
+++ b/src/components/LeaderBoard/LeaderBoard.css
@@ -1,5 +1,5 @@
 .modal-content {
-    position: relative;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -8,6 +8,6 @@
     padding: 14px 28px;
     border-radius: 40px;
     max-width: 600px;
-    min-width: 200px;
+    min-width: 250px;
     border: solid 15px #aa076b ;
 }
