--- a/src/components/Ready/Ready.css
+++ b/src/components/Ready/Ready.css
@@ -27,7 +27,7 @@ h4{
     background: rgba(49,49,49,0.8);
 }
 .modal-content {
-    position: relative;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -36,7 +36,7 @@ h4{
     padding: 14px 28px;
     border-radius: 40px;
     max-width: 600px;
-    min-width: 200px;
+    min-width: 250px;
     
 }
 
