--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,9 @@
     margin:2px;
     
 }
+.Leader2 .modal-content2{
+    left: 50%;
+}
 .heading1 p{
     background-color: white;
     border-radius: 40px;
