--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -17,6 +17,7 @@
     border-radius: 40px;
     max-width: 600px;
     min-width: 250px;
+    height: 80%;
     border: solid 15px #aa076b ;
 }
 label{
