--- a/src/components/Ready/Ready.css
+++ b/src/components/Ready/Ready.css
@@ -26,13 +26,15 @@ h4{
 .overlay {
     background: rgba(49,49,49,0.8);
 }
-.modal-content {
-    position: fixed;
+.modal-content1 {
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     line-height: 1.4;
     background: #f1f1f1;
+    max-height: 200px;
+    border: solid 15px #aa076b ;
     padding: 14px 28px;
     border-radius: 40px;
     max-width: 600px;
