--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -19,6 +19,16 @@
     min-width: 250px;
     height: 80%;
     border: solid 15px #aa076b ;
+    overflow: scroll;
+}
+#signintext{
+    font-size: 15px;
+    
+}
+#signin{
+    padding: 2px;
+    font-size: 15px;
+    
 }
 label{
     font-size: 20px;
