--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -19,6 +19,15 @@
     
 }
 
+#gamecode{
+    background-color: white;
+    margin: 10px;
+    padding: 5px;
+    font-size: 20px;
+    border-radius: 40px;
+    border:none;
+}
+
 #leaderposition{
     margin-top:50px;
 }
